--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,34 @@ body{
     @apply border-2 border-white rounded-full px-6 py-3
   }
   .join_btn{
-    @apply bg-gradient-to-r from-[#8176AF]  to-[#c3b8eb] px-6 py-3 rounded-full
+    @apply bg-gradient-to-r from-[#8176AF]  to-[#C0B7E8] px-6 py-3 rounded-full text-[#343045]
   }
 
   /* hero section styling */
+  .hero_text{
+    @apply text-[40px] font-bold text-white
+  }
+  .linear_gradient_text{
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-[#C0B7E8] to-[#8176AF]
+  }
+  .linear_gradient_text_reverse{
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-[#8176AF] to-[#C0B7E8]
+  }
+  .build_btn{
+    @apply bg-gradient-to-r from-[#8176AF]  to-[#C0B7E8] px-6 py-3 rounded-full text-[#343045] font-bold text-[12px]
+  }
+
+  /* //form */
+  .input{
+    @apply  bg-transparent border-2 border-white rounded-full py-3 px-4 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light 
+  }
+  .input_textarea{
+    @apply bg-transparent border-2 border-white rounded-2xl px-4 py-3 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light
+  }
+
+  /*footer*/
+  .footertext{
+    @apply text-[16px] font-bold
+  }
   
 }
