started with mobile layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,12 @@ body{
   .hero_text{
     @apply text-[40px] font-bold text-white
   }
+  .hero_text_mobile_gradient{
+    @apply text-[36px] font-bold text-white
+  }
+  .hero_text_mobile{
+    @apply text-[24px] font-bold text-white
+  }
   .linear_gradient_text{
     @apply text-transparent bg-clip-text bg-gradient-to-r from-[#C0B7E8] to-[#8176AF]
   }
@@ -41,7 +47,7 @@ body{
 
   /*footer*/
   .footertext{
-    @apply text-[16px] font-bold
+    @apply text-[16px] font-bold text-center
   }
   
 }
