--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+  min-height: 0;
+  min-width: 0;
+  }
 body{
   background-color: #302C42;
 }
