--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   min-width: 0;
   }
 body{
-  background-color: #302C42;
+  background-color: #000;
 }
 @layer components{
   /* navbar styling */
@@ -17,7 +17,7 @@ body{
     @apply border-2 border-white rounded-full px-6 py-3
   }
   .join_btn{
-    @apply bg-gradient-to-r from-[#8176AF]  to-[#C0B7E8] px-6 py-3 rounded-full text-[#343045]
+    @apply bg-[#bd4ee3] px-6 py-3 rounded-full text-white
   }
 
   /* hero section styling */
@@ -31,21 +31,21 @@ body{
     @apply text-[24px] font-bold text-white
   }
   .linear_gradient_text{
-    @apply text-transparent bg-clip-text bg-gradient-to-r from-[#C0B7E8] to-[#8176AF]
+    @apply text-[#BD4EE3]
   }
   .linear_gradient_text_reverse{
     @apply text-transparent bg-clip-text bg-gradient-to-r from-[#8176AF] to-[#C0B7E8]
   }
   .build_btn{
-    @apply bg-gradient-to-r from-[#8176AF]  to-[#C0B7E8] px-6 py-3 rounded-full text-[#343045] font-bold text-[12px]
+    @apply bg-[#BD4EE3]  px-6 py-3 rounded-full text-white font-bold text-[12px]
   }
 
   /* //form */
   .input{
-    @apply  bg-transparent border-2 border-white rounded-full py-3 px-4 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light 
+    @apply  bg-transparent border border-white rounded-lg py-3 px-4 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light 
   }
   .input_textarea{
-    @apply bg-transparent border-2 border-white rounded-2xl px-4 py-3 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light
+    @apply bg-transparent border-2 border-white rounded-lg px-4 py-3 w-full focus:outline-none placeholder:text-[14px] placeholder:font-light
   }
 
   /*footer*/
